# jira-fetch-ex

./: .gitignore  README.md  ex_config.yaml  jira_fetch.py  pyproject.toml
exports/: jira_export.xlsx  ~$jira_export.xlsx
